
-------------------------------------------------------------------



-------------------------------------------------------------------
4.02.1:

-UX revisions

-Code cleanup / optimization

-Misc bug fixes in new logic

-Additional configuration scanning / error logging

-Stand-Alone Mode for the Fiat Currency Market setting, on the "Settings" page

-Moved spot price / volume charts to a sub-directory within the charts directory, for future chart scalability

IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------



-------------------------------------------------------------------
4.03.0:

-Raspberry PI system stats in webpage footer (if a Raspberry Pi system is detected)

-Re-organized chart directory structure (again) for UPCOMING cached time period data sets (1 month / 3 month / 6 month / etc, for quicker chart loading)

-Integrated new system info module into app debugging mode 'stats' (logs hardware / software / system stats to debugging log, when debugging is activated)

IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------



-------------------------------------------------------------------
4.04.0:

-Better error logging for default Bitcoin market

IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------










